+ Added autoadjust feature to atkTextAttribute [Boy]
+ Added deleteAllowed method to all attributes and a AF_RESTRICTED_DELETE
  flag to the atkOneToManyRelation [Boy]
* Fix for bug that would cause obligatory atkdateattributes to be empty 
  instead of assuming the current date [Boy]
+ Added AF_DUMMY_SHOW_LABEL, which causes dummy attribs to be labeled [Boy]

Changes in ATK 5.0.4
--------------------
+ Added atkCurrencyAttribute to display currency values. [Mark]
+ Added addSecurityMap() to atkNode to map privileges to other rights. [Mark]
+ Added encryption utilities (atkEncryption and atkBase64Encryption). [Mark]
+ Added atkSecureRelation for 'Privacy Enhancing Technologies' (PET). [Mark]
+ Added setNumbering() to atkNode, for numbering fields in the gui. [Boy]
+ Added onChange() handler functionality to atkDateAttribute. [Boy]
+ Added renderTop function which renders top.tpl if it exists, or box.tpl
  if not (custom topframe template). [Boy]
+ Added set- and getSelected functionality to atkListAttribute [Boy]
+ Alignment of menu options can be configured with $config_menu_align. [Boy]
+ Added 'details' edit functionality to atkManyBoolRelation. [Ivo]
* atkManyToOneRelation's 'none' string can be customized per node. [Mark]
* atkLanguage now also supports empty values in language files. [Boy]
* Fixed setting the correct initial tab. [Boy]
* atkViewHandler hides back button if going back is not an option. [Mark]
* Fixed bugs in AF_LARGE flag. (bug #302, #330) [Yuri]
* AF_RELATION_AUTOLINK checks edit/add permission when displaying links. [Ivo]
* Fixed field/label alignment in outlook and default themes. [Ivo]
* Fixed bug in atkManyToOnerelation when pointing to a primarykey that in its
  turn was a manytoonerelation. [Lineke,Ivo]
* atkListAttribute's display values are now fetchd from language file. [Ludo]
* Fixed bug in postgres sequences support. [Jose]
* Added 'between' search for PostgreSQL, fixed ddl driver. (bug #310) [Cesar]